# huffman

./: CMakeLists.txt
lib/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  huffman_tree.cpp  huffman_tree.h
test/: testing.cpp
util/: compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  file_reader.cpp  file_reader.h  file_writer.cpp  file_writer.h  main.cpp
